Make QBB the default setting for BPS

--- a/python/lsst/ctrl/bps/etc/bps_defaults.yaml
+++ b/python/lsst/ctrl/bps/etc/bps_defaults.yaml
@@ -20,6 +20,8 @@ qgraphPreCmdOpts: "{defaultPreCmdOpts}"
 initPreCmdOpts: "{defaultPreCmdOpts}"
 # for running Quanta
 runPreCmdOpts: "{defaultPreCmdOpts}"
+# for updateQuantumGraph
+updateQgraphPreCmdOpts: "{defaultPreCmdOpts}"
 
 # Values defining input dataset as well as collection names of output
 payload:
@@ -39,10 +41,11 @@ fileDistributionEndPoint: ""   # Needed by PanDA plugin, must end in / if non-em
 
 pipetask:
   pipetaskInit:
-    # Notes:  Declaring and chaining now happen within execution butler steps.
-    # This command no longer needs -o and must have --extend-run.
-    # Change panda-plugin's config at config/bps_idf.yaml too when changing runQuantumCommand
-    runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask {initPreCmdOpts} run -b {butlerConfig} {pipetaskInput} {pipetaskOutput} --output-run {outputRun} --qgraph {fileDistributionEndPoint}{qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --clobber-outputs --init-only --extend-run {extraInitOptions}"
+    runQuantumCommand: >-
+      ${CTRL_MPEXEC_DIR}/bin/pipetask {initPreCmdOpts} pre-exec-init-qbb
+      {butlerConfig}
+      {fileDistributionEndPoint}{qgraphFile}
+      {extraInitOptions}
   #OPT myTask:
   #OPT   requestCpus:
   #OPT   requestMemory:
@@ -55,8 +58,29 @@ pipetask:
 # Default commands and usage requests for creating QuantumGraph, running Quantum.
 # Defaults to using full workflow QuantumGraph instead of per-job QuantumGraphs.
 whenSaveJobQgraph: "NEVER"
-createQuantumGraph: '${CTRL_MPEXEC_DIR}/bin/pipetask {qgraphPreCmdOpts} qgraph -b {butlerConfig} {pipetaskInput} {pipetaskOutput} --output-run {outputRun} -p {pipelineYaml} -q {qgraphFile} {pipetaskDataQuery} {extraQgraphOptions}'
-runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask {runPreCmdOpts} run -b {butlerConfig} {pipetaskInput} {pipetaskOutput} --output-run {outputRun} --qgraph {fileDistributionEndPoint}{qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --clobber-outputs --skip-init-writes --extend-run {extraRunQuantumOptions}"
+createQuantumGraph: >-
+  ${CTRL_MPEXEC_DIR}/bin/pipetask {qgraphPreCmdOpts} qgraph
+  --butler-config {butlerConfig}
+  {pipetaskInput}
+  {pipetaskOutput}
+  --output-run {outputRun}
+  --pipeline {pipelineYaml}
+  --save-qgraph {qgraphFile}
+  --qgraph-datastore-records
+  {pipetaskDataQuery}
+  {extraQgraphOptions}
+runQuantumCommand: >-
+  ${CTRL_MPEXEC_DIR}/bin/pipetask {runPreCmdOpts} run-qbb
+  {butlerConfig}
+  {fileDistributionEndPoint}{qgraphFile}
+  --qgraph-node-id {qgraphNodeId}
+  {extraRunQuantumOptions}
+updateQuantumGraph: >-
+  ${CTRL_MPEXEC_DIR}/bin/pipetask {updateQgraphPreCmdOpts} update-graph-run
+  {inputQgraphFile}
+  {outputRun}
+  {qgraphFile}
+  {extraUpdateQgraphOptions}
 preemptible: True
 requestMemory: 2048
 requestCpus: 1
@@ -68,7 +92,6 @@ clusterAlgorithm: lsst.ctrl.bps.quantum_clustering_funcs.single_quantum_clusteri
 # Templates for bps filenames
 submitPath: ${PWD}/submit/{outputRun}
 qgraphFileTemplate: "{uniqProcName}.qgraph"
-executionButlerTemplate: "{submitPath}/EXEC_REPO-{uniqProcName}"
 subDirTemplate: "{label}/{tract}/{patch}/{band}/{subfilter}/{physical_filter}/{visit}/{exposure}"
 templateDataId: "{tract}_{patch}_{band}_{visit}_{exposure}_{detector}"
 
@@ -80,15 +103,23 @@ saveClusteredQgraph: False
 # Temporary backward-compatibility settings
 useLazyCommands: True
 
+# Disable creation of the execution Butler (EB). May be removed once EB
+# is retired.
 executionButler:
-  whenCreate: "SUBMIT"
-  #OPT executionButlerDir: "/my/exec/butler/dir"  # User-provided or defaults to executionButlerTemplate
-  createCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask qgraph -b {butlerConfig} {pipetaskInput} {pipetaskOutput} --output-run {outputRun} --save-execution-butler {executionButlerDir} -g {qgraphFile}"
-  whenMerge: "ALWAYS"
-  implementation: JOB  # Added for future flexibility, e.g., if prefer workflow instead of shell script.
-  concurrencyLimit: db_limit
+  whenCreate: "NEVER"
 
-  mergePreCmdOpts: "{defaultPreCmdOpts}"
-  command1: "${DAF_BUTLER_DIR}/bin/butler {mergePreCmdOpts} transfer-datasets {executionButlerDir} {butlerConfig} --collections {outputRun} --register-dataset-types"
-  command2: "${DAF_BUTLER_DIR}/bin/butler {mergePreCmdOpts} collection-chain {butlerConfig} {output} --flatten --mode=extend {inCollection}"
-  command3: "${DAF_BUTLER_DIR}/bin/butler {mergePreCmdOpts} collection-chain {butlerConfig} {output} --flatten --mode=prepend {outputRun}"
+finalJob:
+  whenSetup: "NEVER"
+  whenRun: "ALWAYS"
+  # Added for future flexibility, e.g., if prefer workflow instead of shell
+  # script.
+  implementation: JOB
+  concurrencyLimit: db_limit
+  finalPreCmdOpts: "{defaultPreCmdOpts}"
+  command1: >-
+    ${DAF_BUTLER_DIR}/bin/butler {finalPreCmdOpts} transfer-from-graph
+    {fileDistributionEndPoint}{qgraphFile}
+    {butlerConfig}
+    --register-dataset-types
+    --update-output-chain
+    --transfer-dimensions
