--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lsst-ctrl-bps"
+requires-python = ">=3.10.0"
 description = "Pluggable execution of workflow graphs from Rubin pipelines."
 license = {text = "GPLv3+ License"}
 readme = "README.md"
