--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,11 @@ dependencies = [
     "pyyaml >=5.1",
     "click >= 7.0",
     "networkx",
-    "lsst-daf-butler",
-    "lsst-pipe-base",
-    "lsst-ctrl-mpexec",
-    "lsst-utils",
-    "lsst-resources"
+    "lsst-daf-butler >=26.0,<26.100",
+    "lsst-pipe-base >=26.0,<26.100",
+    "lsst-ctrl-mpexec >=26.0,<26.100",
+    "lsst-utils >=26.0,<26.100",
+    "lsst-resources >=26.0,<26.100"
 ]
 dynamic = ["version"]
 
