--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,12 +31,12 @@ jobs:
       - name: Update pip/wheel infrastructure
         shell: bash -l {0}
         run: |
-          conda install -y -q pip wheel
+          conda install -y -q pip wheel uv
 
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          pip install -r requirements.txt
+          uv pip install -r requirements.txt
 
       # We have two cores so we can speed up the testing with xdist
       - name: Install pytest packages
@@ -54,7 +54,7 @@ jobs:
       - name: Build and install
         shell: bash -l {0}
         run: |
-          pip install --no-deps -v .
+          uv pip install --no-deps -v .
 
       - name: Run tests
         shell: bash -l {0}
