--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -25,17 +25,18 @@ jobs:
       - name: Update pip/wheel infrastructure
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
+          pip install uv
+          uv pip install --system wheel
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          uv pip install --system -r requirements.txt
 
       - name: Build and install
-        run: pip install --no-deps -v .
+        run: uv pip install --system --no-deps -v .
 
       - name: Install documenteer
-        run: pip install 'documenteer[pipelines]==0.8.2'
+        run: uv pip install --system 'documenteer[pipelines]==0.8.2'
 
       - name: Build documentation
         working-directory: ./doc
