--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ bps = "lsst.ctrl.bps.cli.bps:main"
     filename = "doc/lsst.ctrl.bps/CHANGES.rst"
     directory = "doc/changes"
     title_format = "lsst-ctrl-bps {version} ({project_date})"
-    issue_format = "`{issue} <https://jira.lsstcorp.org/browse/{issue}>`_"
+    issue_format = "`{issue} <https://rubinobs.atlassian.net/browse/{issue}>`_"
 
     [[tool.towncrier.type]]
         directory = "feature"
