--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda install -y -q \
-            pytest pytest-xdist pytest-openfiles pytest-cov
+            pytest pytest-xdist pytest-cov
 
       - name: List installed packages
         shell: bash -l {0}
@@ -61,7 +61,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
-          pytest -r a -v -n 3 --open-files --cov=lsst.ctrl.bps --cov=tests --cov-report=xml --cov-report=term --cov-branch
+          pytest -r a -v -n 3 --cov=lsst.ctrl.bps --cov=tests --cov-report=xml --cov-report=term --cov-branch
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v4
         with:
