--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click
 astropy
 networkx
+numpy >= 1.17, <2
 pyyaml
 lsst-daf-butler @ git+https://github.com/lsst/daf_butler@main
 lsst-utils @ git+https://github.com/lsst/utils@main
