Ignore dist-info dir

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ python/lsst/ctrl/bps/version.py
 _build.*
 .sconsign.dblite
 bin/
+python/*.dist-info/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
