--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,6 +158,7 @@ select = [
     "C4",
     "I",  # isort
     "RUF022",  # sort __all__
+    "B",  # bugbear
 ]
 extend-select = [
     "RUF100", # Warn about unused noqa
