Remove 1 from finalJob's retryUnlessExit.

--- a/python/lsst/ctrl/bps/etc/bps_defaults.yaml
+++ b/python/lsst/ctrl/bps/etc/bps_defaults.yaml
@@ -115,6 +115,7 @@ executionButler:
   whenCreate: "NEVER"
 
 finalJob:
+  retryUnlessExit: 2
   updateOutputChain: "--update-output-chain"
   whenSetup: "NEVER"
   whenRun: "ALWAYS"
