--- a/python/lsst/ctrl/bps/etc/bps_defaults.yaml
+++ b/python/lsst/ctrl/bps/etc/bps_defaults.yaml
@@ -114,6 +114,8 @@ useLazyCommands: True
 executionButler:
   whenCreate: "NEVER"
 
+finalJobNumProcesses: 8
+extraAggregateOptions: ""
 finalJob:
   retryUnlessExit: 2
   updateOutputChain: "--update-output-chain"
@@ -124,12 +126,16 @@ finalJob:
   implementation: JOB
   concurrencyLimit: db_limit
   finalPreCmdOpts: "{defaultPreCmdOpts}"
+  requestCpus: "{finalJobNumProcesses}"
+  requestMemory: 16384
   command1: >-
-    ${DAF_BUTLER_DIR}/bin/butler {finalPreCmdOpts} transfer-from-graph
+    ${DAF_BUTLER_DIR}/bin/butler {finalPreCmdOpts} aggregate-graph
     {fileDistributionEndPoint}{qgraphFile}
     {butlerConfig}
+    -j {finalJobNumProcesses}
     --register-dataset-types
     {updateOutputChain}
+    {extraAggregateOptions}
 
 # Set a global default memory limit (in MiB) for the automatic memory scaling
 # mechanism. The value, 480 GiB, picked based on the cluster specifications
