--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 click
 astropy
-networkx
+networkx <3.6
 pyyaml
 lsst-daf-butler @ git+https://github.com/lsst/daf_butler@main
 lsst-utils @ git+https://github.com/lsst/utils@main
