Use -Wd for action tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest -r a -v -n 3 --cov=lsst.ctrl.bps --cov=tests --cov-report=xml --cov-report=term --cov-branch \
+          pytest -Wd -r a -v -n 3 --cov=lsst.ctrl.bps --cov=tests --cov-report=xml --cov-report=term --cov-branch \
             --junitxml=junit.xml -o junit_family=legacy
       - name: Upload coverage to codecov
         uses: codecov/codecov-action@v5
